external-crates/move/crates/move-compiler/tests/move_check/expansion/use_function_tparam_shadows.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:7:17
  │
7 │     use 0x2::X::foo;
  │                 ^^^ Unused 'use' of alias 'foo'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:10:9
   │
10 │         foo()
   │         ^^^ Unbound function 'foo' in current scope
